<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <View
        android:id="@+id/gratsTitle"
        android:layout_width="342dp"
        android:layout_height="30dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/gratsTitleText"
        android:layout_width="342dp"
        android:layout_height="26dp"
        android:gravity="center_horizontal"
        android:text="@string/good_usage"
        android:textColor="@color/light_black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/gratsTitle"
        app:layout_constraintEnd_toEndOf="@+id/gratsTitle"
        app:layout_constraintHorizontal_bias="0.768"
        app:layout_constraintStart_toStartOf="@+id/gratsTitle"
        app:layout_constraintTop_toTopOf="@+id/gratsTitle" />

    <View
        android:id="@+id/gratsMain"
        android:layout_width="318dp"
        android:layout_height="257dp"
        android:layout_marginTop="149dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gratsTitle" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="checked"
        android:src="@drawable/ic_grats"
        app:layout_constraintEnd_toEndOf="@+id/gratsMain"
        app:layout_constraintStart_toStartOf="@+id/gratsMain"
        app:layout_constraintTop_toTopOf="@+id/gratsMain"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/gratsMainTitleText"
        android:layout_width="176dp"
        android:layout_height="29dp"
        android:gravity="center_horizontal"
        android:text="@string/grats"
        android:textColor="@color/light_black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/gratsMainDesc"
        app:layout_constraintStart_toStartOf="@+id/gratsMainDesc"
        app:layout_constraintTop_toTopOf="@+id/gratsMainDesc" />

    <TextView
        android:layout_width="318dp"
        android:layout_height="68dp"
        android:gravity="center_horizontal"
        android:text="@string/success_sign_up"
        android:textColor="@color/light_black"
        android:textSize="14sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="@+id/gratsMain"
        app:layout_constraintEnd_toEndOf="@+id/gratsMainDesc"
        app:layout_constraintStart_toStartOf="@+id/gratsMainDesc" />

    <View
        android:id="@+id/gratsMainDesc"
        android:layout_width="318dp"
        android:layout_height="129dp"
        app:layout_constraintBottom_toBottomOf="@+id/gratsMain"
        app:layout_constraintEnd_toEndOf="@+id/gratsMain"
        app:layout_constraintStart_toStartOf="@+id/gratsMain" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/gratsNextButton"
        android:theme="@style/FormButton"
        android:layout_width="342dp"
        android:layout_height="52dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/main_purple"
        android:fontFamily="@font/montserrat"
        android:text="@string/next"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="normal"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>